# spotify-bpm-checker

./: README.md  package-lock.json
app/: main.py  pyproject.toml
app/src/: bpm_feature.py  config_setup.py  get_access_token.py
app/src/endpoints/: get_bpm_playlist.py
app/src/entitites/: track.py
app/src/example_data/: good_sleepy_scores.py  good_workout_scores.py
app/src/spotify_getters/: get_playlist.py  playlists.py  spotify_playlist.py  spotify_track.py
app/src/utils/: track_sleepy_score.py  track_workout_score.py
my-react-app/: package-lock.json
my-react-app/src/: App.tsx
